--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,7 +193,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
+    implementation project(':react-native-immediate-phone-call')
+    
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
